syntax = "proto3";
package rooms;

import "rooms.proto";

option go_package = ".;proto";

service Messages {
    rpc GetMessagesByRoom(MessageID) returns (GetMessagesByRoomResponse) {}
}

message MessageID {
	string RoomID = 1;
	int64 Limit = 2;
	int64 Offset = 3;
}

message GetMessagesByRoomResponse{
	bytes Messages = 1;
	rooms.Status Status = 2;
}

message RabbitMessage{
	bytes Message = 1;
	string MessageType = 2;
	int64 EventType = 3;
	string RoomID = 4;
}
