syntax = "proto3";
package rooms;

option go_package = ".;proto";

service Rooms {
    rpc GetRoom(RoomID) returns (RoomStructResponse) {}
    rpc GetAllRooms(GetAllRoomsRequest) returns (RoomStructResponse) {}
    rpc CreateRoom(RoomStruct) returns (RoomStructResponse) {}
    rpc DeleteRoom(DeleteRequest) returns (Status) {}
    rpc UpdateRoom(UpdateRequest) returns (RoomStructResponse) {}
    rpc AddUsers(AddUsersRequest) returns (Status) {}
    rpc DeleteUsers(AddUsersRequest) returns (Status) {}
}

message RoomID {
	string ID = 1;
}

message RoomStruct {
	bytes RoomInfo = 1;
}

message GetAllRoomsRequest {
	int64 Limit = 1;
	int64 Offset = 2;
	string UserID = 3;
}

message RoomStructResponse {
	bytes Room = 1;
	Status Status = 2;
}

message DeleteRequest {
	string RoomID = 1;
}

message Status {
	bool Ok = 1;
	string Error = 2;
}

message UpdateRequest {
	bytes Room = 1;
	string RoomID = 2;
}

message AddUsersRequest {
	string RoomID = 1;
	repeated string UserIDs = 3;
}
